<resources>
    <string name="app_name">Restaurant Application</string>

    <string name="inspection_days">\u0020days ago</string>
    <string name="inspection_day">\u0020day ago</string>
    <string name="unmatchedIssueCode">Unknown</string>
    <string name="inspectNumCritIssues"># Critical issues:</string>
    <string name="inspectionNumNonCritIssues"># Non-critical issues:</string>
    <string name="inspectionNumNonCritValue">#</string>
    <string name="inspectionNumCritValue">#</string>
    <string name="inspectionInspectionDateValue">Inspection_date</string>
    <string name="inspectionInspectionDate">Inspection Date:</string>
    <string name="inspectionHazardLevel">Hazard:</string>
    <string name="inspectionRestaurantName">Restaurant:</string>
    <string name="inspectionRestaurantNameValue">Restaurant_name</string>
    <string name="inspectionAddress">Address:</string>
    <string name="inspectionCoordinates">GPS Coordinates:</string>
    <string name="inspectionAddressValue">Physical_Address</string>
    <string name="inspectionLatitude">49.2000</string>
    <string name="inspectionLongitude">-122.867</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="restaurantNumIssues">Num issues:</string>
    <string name="restaurantNumIssuesValue">#</string>
    <string name="restaurantHazardLevel">Hazard:</string>
    <string name="restaurantLastInspection">Inspection Date:</string>
    <string name="restaurantLastInspectionValue">Date:</string>
    <string name="inspectionBackBtn">back</string>
    <string name="issue_brief_description">Brief Description</string>
    <string name="issue_violation_type_value">Violation_type</string>
    <string name="issue_violation_type">Nature of the violation:</string>
    <string name="issueSeverity">CriticalOrNonCritical</string>
    <string name="issue_hazard_level_value">Hazard_level</string>
    <string name="issue_hazard_level">Hazard:</string>
    <string name="issue_inspection_date_value">Inspection_date</string>
    <string name="issue_inspection_date">Inspection Date:</string>
    <string name="issue_inspection_type">Inspection Type:</string>
    <string name="issue_inspection_type_value">issueType</string>
    <string name="issue_num_critical_issues">Critical Issues:</string>
    <string name="issue_num_critical_issues_value"># Issues</string>
    <string name="issue_num_non_critical_issues">Non-Critical Issues:</string>
    <string name="issue_num_non_critical_issues_value"># Issues</string>
    <string name="no_inspections">No inspection yet</string>

    <string name="main_legend_low_hazard">Low Hazard</string>
    <string name="main_legend_high_hazard">High Hazard</string>
    <string name="main_legend_moderate_hazard">Moderate Hazard</string>

    <string name="violation_type_building">Building|Premise is not up to regulations</string>
    <string name="violation_type_equipment">Equipment|Equipment not properly maintained or lacking proper equipment</string>
    <string name="violation_type_food">Food|Issues with storing, cooking, or obtaining food</string>
    <string name="violation_type_staff">Staff|Staff do not follow proper procedures dealing with food</string>
    <string name="violation_type_permit">Permit|Operation with no permit or issues with permit</string>
    <string name="violation_type_pests">Pests|Animals present or conditions may allow pests to enter</string>

    <string name="inspection_month_january">January</string>
    <string name="inspection_month_february">February</string>
    <string name="inspection_month_march">March</string>
    <string name="inspection_month_april">April</string>
    <string name="inspection_month_may">May</string>
    <string name="inspection_month_june">June</string>
    <string name="inspection_month_july">July</string>
    <string name="inspection_month_august">August</string>
    <string name="inspection_month_september">September</string>
    <string name="inspection_month_october">October</string>
    <string name="inspection_month_november">November</string>
    <string name="inspection_month_december">December</string>
    <string name="title_activity_maps">Map</string>

    <string name="downloading">Downloading</string>
    <string name="downloadingwait">Please wait, data is downloading.</string>
    <string name="downloadingcancel">Cancel</string>
    <string name="downloadingfinish">Finish</string>
    <string name="updateAvailable">Update Available</string>
    <string name="updateAvailableMsg">Would you like to update now?\n
        If no, this will pop up again on the next app run.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dataLoading">Loading Data. Will refresh when finished.</string>
    <string name="loading">Loading</string>

    <string name="stopFollow">Stop Follow</string>

    <string name="title_activity_restaurants">Restaurants</string>
    <string name="title_activity_inspections">Inspections</string>
    <string name="title_activity_issues">Issues</string>

    <string name="type_building">Building</string>
    <string name="type_equipment">Equipment</string>
    <string name="type_food">Food</string>
    <string name="type_staff">Staff</string>
    <string name="type_permit">Permit</string>
    <string name="type_pests">Pests</string>

    <string name="hazard_level">Hazard Level:\u0020</string>

    <string name="action_search">Search</string>
    <string name="action_maps">maps</string>
    <string name="filter_textView_hazard_level">Hazard Level</string>
    <string name="filter_textView_tag_favourites">Favourites</string>
    <string name="filter_stringarray_hazard_default_level">Choose the hazard level…</string>
    <string name="filter_stringarray_hazard_low_level">Low</string>
    <string name="filter_stringarray_hazard_moderate_level">Moderate</string>
    <string name="filter_stringarray_hazard_high_level">High</string>
    <string name="filter_textView_num_critical_violations">Num Crit. Issues</string>
    <string name="favouriteRestaurant">Favourite</string>
    <string name="view_favourites">View Favourites</string>
    <string name="radio_less_than_equal_maps"><![CDATA[<=]]></string>
    <string name="radio_greater_than_equal_maps"><![CDATA[>=]]></string>
    <string name="radio_less_than_equal"><![CDATA[<=]]></string>
    <string name="radio_greater_than_equal"><![CDATA[>=]]></string>
    <string name="toast_msg_recent_inspections_fav_restaurants">There are updated recent inspections for your favourite restaurants</string>
    <string name="alert_filter_dialog_title">Filter Settings</string>
    <string name="alert_filter_dialog_positive">Confirm</string>
    <string name="alert_filter_dialog_negative">Reset</string>

    <string name="hazard_level_low">Low</string>
    <string name="hazard_level_moderate">Moderate</string>
    <string name="hazard_level_high">High</string>

    <string name="issue_severity_critical">Critical</string>
    <string name="issue_severity_notcritical">Not Critical</string>

    <string name="mainactivity_toast_text">You must clear the search query, and reset the filters before proceeding to Maps</string>
    <string name="mapsactivity_toast_text">You must clear the search query, and reset the filters before proceeding to the Restaurant list</string>

    <string name="title_activity_new_inspections_for_favourites">Favourites: Recent Inspection</string>

</resources>
